--- a/css/style.css
+++ b/css/style.css
@@ -226,3 +226,29 @@ Extra (xl) large devices (large desktops, 1200px and up)
   transform: translateZ(0);
   will-change: transform;
 }
+/* yellow section */
+
+.custom-heading-yellow{
+  font-size: larger;
+  font-weight: bolder;
+  color: #ffc52f;
+}
+.custom-heading-5{
+  font-size: large;
+  font-weight: bold;
+
+}
+.btn-outline-dark{
+  background-color: #4981b3 !important;
+  color: white;
+}
+#btn-back-to-top {
+  position: fixed;
+  bottom: 20px;
+  right: 20px;
+  background-color: #4981b3 !important; 
+  color: white !important;
+  border-radius: 50% !important;
+  border:#4981b3 ;
+  display: none;
+}
