--- a/css/style.css
+++ b/css/style.css
@@ -252,3 +252,7 @@ Extra (xl) large devices (large desktops, 1200px and up)
   border:#4981b3 ;
   display: none;
 }
+.factory-div{
+  font-weight: bold;
+  font-size: 0.5rem;
+}
